WIP: bugfix for quadratic segment/meshes

--- a/tests/mesh/CMakeLists.txt
+++ b/tests/mesh/CMakeLists.txt
@@ -6,7 +6,7 @@ add_um2_test(./regular_partition.cpp)
 add_um2_test(./rectilinear_grid.cpp)
 add_um2_test(./rectilinear_partition.cpp)
 add_um2_test(./polytope_soup.cpp)
-#add_um2_test(./face_vertex_mesh/tri_mesh.cpp)
+add_um2_test(./face_vertex_mesh/tri_mesh.cpp)
 #add_um2_test(./face_vertex_mesh/quad_mesh.cpp)
 #add_um2_test(./face_vertex_mesh/quadratic_tri_mesh.cpp)
 #add_um2_test(./face_vertex_mesh/quadratic_quad_mesh.cpp)
