WIP: robust geometry testing

--- a/tests/common/CMakeLists.txt
+++ b/tests/common/CMakeLists.txt
@@ -2,3 +2,4 @@ add_um2_test(./logger.cpp)
 add_um2_test(./color.cpp)
 add_um2_test(./insertion_sort.cpp)
 add_um2_test(./permutation.cpp)
+add_um2_test(./strto.cpp)
