--- a/tests/stdlib/CMakeLists.txt
+++ b/tests/stdlib/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(./utility)
 add_subdirectory(./math)
 add_subdirectory(./algorithm)
 add_subdirectory(./numeric)
+add_subdirectory(./cstring)
 add_um2_test(./vector.cpp)
 add_um2_test(./string_view.cpp)
 add_um2_test(./string.cpp)
