WIP: correct epsilons

--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -2,4 +2,5 @@ add_um2_test(./morton.cpp)
 add_um2_test(./stats.cpp)
 add_um2_test(./vec.cpp)
 add_um2_test(./mat.cpp)
+add_um2_test(./quadratic_equation.cpp)
 add_um2_test(./cubic_equation.cpp)
