geom fix through tri6

--- a/tests/geometry/CMakeLists.txt
+++ b/tests/geometry/CMakeLists.txt
@@ -5,7 +5,7 @@ add_um2_test(./axis_aligned_box.cpp)
 add_um2_test(./modular_rays.cpp)
 add_um2_test(./polytope/line_segment.cpp)
 add_um2_test(./polytope/triangle.cpp)
-#add_um2_test(./polytope/quadrilateral.cpp)
-#add_um2_test(./polytope/quadratic_segment.cpp)
-#add_um2_test(./polytope/quadratic_triangle.cpp)
+add_um2_test(./polytope/quadrilateral.cpp)
+add_um2_test(./polytope/quadratic_segment.cpp)
+add_um2_test(./polytope/quadratic_triangle.cpp)
 #add_um2_test(./polytope/quadratic_quadrilateral.cpp)
