--- a/tests/geometry/CMakeLists.txt
+++ b/tests/geometry/CMakeLists.txt
@@ -8,4 +8,4 @@ add_um2_test(./polytope/triangle.cpp)
 add_um2_test(./polytope/quadrilateral.cpp)
 add_um2_test(./polytope/quadratic_segment.cpp)
 add_um2_test(./polytope/quadratic_triangle.cpp)
-#add_um2_test(./polytope/quadratic_quadrilateral.cpp)
+add_um2_test(./polytope/quadratic_quadrilateral.cpp)
