WIP: simplify MPACT functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,11 +160,11 @@ set(UM2_SOURCES
     "src/common/logger.cpp"
     "src/mesh/polytope_soup.cpp"
     "src/mesh/face_vertex_mesh.cpp"
-    #    "src/physics/cross_section.cpp"
-    #    "src/physics/nuclide.cpp"
-    #    "src/physics/cross_section_library.cpp"
-    #    "src/physics/material.cpp"
-    #    "src/mpact/spatial_partition.cpp"
+    "src/physics/cross_section.cpp"
+    "src/physics/nuclide.cpp"
+    "src/physics/material.cpp"
+    "src/physics/cross_section_library.cpp"
+    "src/mpact/model.cpp"
     #    "src/gmsh/base_gmsh_api.cpp"
     #    "src/gmsh/io.cpp"
     #    "src/gmsh/model.cpp"
