--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,13 +165,13 @@ set(UM2_SOURCES
     "src/physics/material.cpp"
     "src/physics/cross_section_library.cpp"
     "src/mpact/model.cpp"
-    #    "src/gmsh/base_gmsh_api.cpp"
-    #    "src/gmsh/io.cpp"
-    #    "src/gmsh/model.cpp"
+    "src/gmsh/base_gmsh_api.cpp"
+    "src/gmsh/io.cpp"
+    "src/gmsh/model.cpp"
     #    "src/gmsh/mesh.cpp"
     #    #    #    ##    # visualization
     #    #    #    ##    "src/visualization/Image2D.cpp"
-    #    "src/um2.cpp"
+    "src/um2.cpp"
     #    #    "src/um2c.cpp"
   )
 
