--- a/tests/common/CMakeLists.txt
+++ b/tests/common/CMakeLists.txt
@@ -4,3 +4,4 @@ add_um2_test(./branchless_sort.cpp)
 add_um2_test(./insertion_sort.cpp)
 add_um2_test(./permutation.cpp)
 add_um2_test(./strto.cpp)
+add_um2_test(./string_to_lattice.cpp)
