--- a/models/CMakeLists.txt
+++ b/models/CMakeLists.txt
@@ -1,4 +1,4 @@
 include(${PROJECT_SOURCE_DIR}/cmake/add_um2_model.cmake)
-add_subdirectory(./c5g7)
-#add_subdirectory(./vera)
 
+add_subdirectory(./c5g7)
+add_subdirectory(./vera)
