--- a/tests/api/CMakeLists.txt
+++ b/tests/api/CMakeLists.txt
@@ -1,2 +1,5 @@
+# Copy the mesh files to the built test directory
+file(COPY ${PROJECT_SOURCE_DIR}/tests/api/api_mesh_files DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 add_um2_test(./um2_cpp_api.cpp)
 add_um2_test(./um2_c_api.cpp)
