--- a/tests/stdlib/math/CMakeLists.txt
+++ b/tests/stdlib/math/CMakeLists.txt
@@ -1,10 +1,10 @@
-add_um2_test(./abs.cpp)
-add_um2_test(./copysign.cpp)
-add_um2_test(./exponential_functions.cpp)
-add_um2_test(./fma.cpp)
-add_um2_test(./inverse_hyperbolic_functions.cpp)
-add_um2_test(./inverse_trigonometric_functions.cpp)
-add_um2_test(./logarithms.cpp)
-add_um2_test(./roots.cpp)
-add_um2_test(./rounding_functions.cpp)
-add_um2_test(./trigonometric_functions.cpp)
+um2_add_test(./abs.cpp)
+um2_add_test(./copysign.cpp)
+um2_add_test(./exponential_functions.cpp)
+um2_add_test(./fma.cpp)
+um2_add_test(./inverse_hyperbolic_functions.cpp)
+um2_add_test(./inverse_trigonometric_functions.cpp)
+um2_add_test(./logarithms.cpp)
+um2_add_test(./roots.cpp)
+um2_add_test(./rounding_functions.cpp)
+um2_add_test(./trigonometric_functions.cpp)
