--- a/tests/stdlib/utility/CMakeLists.txt
+++ b/tests/stdlib/utility/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_um2_test(./forward.cpp)
-add_um2_test(./move.cpp)
-add_um2_test(./pair.cpp)
-add_um2_test(./swap.cpp)
+um2_add_test(./forward.cpp)
+um2_add_test(./move.cpp)
+um2_add_test(./pair.cpp)
+um2_add_test(./swap.cpp)
+um2_add_test(./is_pointer_in_range.cpp)
