constexpr correction of stdlib

--- a/tests/stdlib/algorithm/CMakeLists.txt
+++ b/tests/stdlib/algorithm/CMakeLists.txt
@@ -1,9 +1,9 @@
-add_um2_test(./clamp.cpp)
-add_um2_test(./copy.cpp)
-add_um2_test(./equal.cpp)
-add_um2_test(./fill.cpp)
-add_um2_test(./is_sorted.cpp)
-add_um2_test(./lexicographical_compare.cpp)
-add_um2_test(./max.cpp)
-add_um2_test(./max_element.cpp)
-add_um2_test(./min.cpp)
+um2_add_test(./clamp.cpp)
+um2_add_test(./copy.cpp)
+um2_add_test(./equal.cpp)
+um2_add_test(./fill.cpp)
+um2_add_test(./is_sorted.cpp)
+um2_add_test(./lexicographical_compare.cpp)
+um2_add_test(./max.cpp)
+um2_add_test(./max_element.cpp)
+um2_add_test(./min.cpp)
