WIP: VERA 4 2D model

--- a/post-process/CMakeLists.txt
+++ b/post-process/CMakeLists.txt
@@ -2,3 +2,4 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_executable.cmake)
 
 add_um2_executable(./extract_mpact_meanchordlength.cpp)
 add_um2_executable(./extract_mpact_edge_length.cpp)
+add_um2_executable(./extract_mpact_optical_thickness.cpp)
