--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -4,3 +4,4 @@ add_um2_test(./vec.cpp)
 add_um2_test(./mat.cpp)
 add_um2_test(./quadratic_equation.cpp)
 add_um2_test(./cubic_equation.cpp)
+add_um2_test(./matrix.cpp)
