--- a/tests/stdlib/CMakeLists.txt
+++ b/tests/stdlib/CMakeLists.txt
@@ -5,5 +5,5 @@ add_subdirectory(./algorithm)
 add_subdirectory(./numeric)
 add_subdirectory(./cstring)
 um2_add_test(./vector.cpp)
-um2_add_test(./string_view.cpp)
-um2_add_test(./string.cpp)
+#um2_add_test(./string_view.cpp)
+#um2_add_test(./string.cpp)
